--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,14 +27,14 @@ dist.dir=dist
 dist.jar=${dist.dir}/SAB.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.iText-2.0.8.jar=librerias\\iText-2.0.8.jar
 file.reference.mysql-connector-java-8.0.19.jar=C:\\Users\\Practicas1\\Documents\\mysql-connector-java-8.0.19.jar
-file.reference.mysql-connector-java-8.0.19.jar-1=librerias\\mysql-connector-java-8.0.19.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.19.jar}:\
-    ${file.reference.mysql-connector-java-8.0.19.jar-1}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.iText-2.0.8.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
