--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,12 +29,14 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.iText-2.0.8.jar=librerias\\iText-2.0.8.jar
 file.reference.mysql-connector-java-8.0.19.jar=C:\\Users\\Practicas1\\Documents\\mysql-connector-java-8.0.19.jar
+file.reference.mysql-connector-java-8.0.19.jar-1=librerias\\mysql-connector-java-8.0.19.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.19.jar}:\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.iText-2.0.8.jar}
+    ${file.reference.iText-2.0.8.jar}:\
+    ${file.reference.mysql-connector-java-8.0.19.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
